Closed Bug 201033 Opened 21 years ago Closed 21 years ago

[TestGtkEmbed - linux embed] Crash attempting to browse any site

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: tracy, Assigned: blizzard)

Details

(Keywords: smoketest)

Attachments

(2 files)

seen on linux testgtkembed 2003-04-07-05-trunk

-launch the build
-enter any site in the URL

after some messages about state change and visibilty te follow is seen in the
console:

load_finished_cb
./run-mozilla.sh: line 454:  8345 Killed                  "$prog" ${1+"$@"}

this happens at any URL; making this app unusable.
Can you post the messages? This could be mine.
Here is what I see for the crash traceback

Program received signal SIGSEGV, Segmentation fault.
0x4036a963 in g_str_equal () from /usr/lib/libglib-1.2.so.0
Current language:  auto; currently c
(gdb) bt
#0  0x4036a963 in g_str_equal () from /usr/lib/libglib-1.2.so.0
#1  0x4035cb47 in g_hash_table_lookup () from /usr/lib/libglib-1.2.so.0
#2  0x40359173 in g_quark_try_string () from /usr/lib/libglib-1.2.so.0
#3  0x4029918a in gtk_object_get_data () from /usr/lib/libgtk-1.2.so.0
#4  0x407dbc18 in nsWindow::FindTopLevelWindow (this=0x80df3f8) at nsWindow.cpp:4252
#5  0x407dbda3 in nsWindow::GetWindowTranslucency (this=0x80df3f8,
aTranslucent=@0xbffff5ec) at nsWindow.cpp:4318
#6  0x407dbdcf in nsWindow::GetWindowTranslucency (this=0x80df3f8,
aTranslucent=@0xbffff5ec) at nsWindow.cpp:4320
#7  0x407dbdcf in nsWindow::GetWindowTranslucency (this=0x80df3f8,
aTranslucent=@0xbffff5ec) at nsWindow.cpp:4320
... and it just keeps goin
Submitting this patch for roc+
fixes crash on linux
fix checked in...
this was due to a checkin for bug 113232
blizzard gave me an r= on irc
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
verified fixed with build 2003-04-07-13-trunk
Status: RESOLVED → VERIFIED
This cleans up the code that has to pass calls to the various toplevels.  A lot
cleaner than the old way and using the mis-named FindTopLevelWindow().
Attachment #119814 - Flags: review?(roc+moz)
Reopening so I can get this cleaned up patch in.
Severity: blocker → normal
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
-> blizzard@mozilla.org
Status: REOPENED → NEW
Comment on attachment 119814 [details] [diff] [review]
pleased to be cleaning up of the patch

Looks good ... can you test the transparent octopus?
Attachment #119814 - Flags: superreview+
Attachment #119814 - Flags: review?(roc+moz)
Attachment #119814 - Flags: review+
Yeah, seems to work OK.  (Checked in.)
Status: NEW → RESOLVED
Closed: 21 years ago21 years ago
Resolution: --- → FIXED
still working well.

verified
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: