Bug #201033.  Cleanup the code that passes calls to any owning toplevel.  r+sr=roc